fix: sponsors alignment #52 (#79)
* add: FAQ Page [ui] #53

* add: Sponsors Page [ui] #52

* fix: update manifest, sponsors #52

* fix: bugs

* fix: icons, sponsors, manifest

--- a/src/components/SponsorsCard/SponsorsCard.styles.css
+++ b/src/components/SponsorsCard/SponsorsCard.styles.css
@@ -1,5 +1,5 @@
 .sponsorcard {
-  margin: 10px;
+  margin: 50px;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -9,41 +9,60 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  font-family: "Mulish";
+  font-family: "Cinzel";
   font-style: normal;
   font-weight: bold;
 }
-.sponsorcard-container div {
+.sponsorcard-container > div {
   padding: 1% 1%;
-  margin: 10px auto;
+  margin: 20px auto;
   /* width: 100%; */
   text-align: center;
+}
+.sponsorcard-container div {
+  /* width: 100%; */
+  text-align: center;
+}
+.sponsorcard-title {
+  margin: 20px;
 }
 .sponsorcard-title-0 {
   font-size: 1.36rem;
 }
-.sponsorcard-title-1 {
-  font-size: 1.6rem;
-}
+.sponsorcard-title-1,
 .sponsorcard-title-2 {
-  font-size: 1.5rem;
-}
-.sponsorcard-title-3 {
   font-size: 1.4rem;
 }
-.sponsorcard-title-4 {
-  font-size: 1.35rem;
+.sponsorcard-title-3 {
+  font-size: 1.3rem;
+}
+.sponsorcard-title-4,
+.sponsorcard-title-5,
+.sponsorcard-title-6,
+.sponsorcard-title-7 {
+  font-size: 1.3rem;
 }
 
-.sponsorcard-divider-4,
-.sponsorcard-divider-3 {
+.sponsorcard-divider-5 {
   display: none;
 }
 .sponsorcard-paper {
   background-color: #0b0b0b;
   width: fit-content;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
+  align-items: center;
+  align-self: center;
+  margin: auto;
+}
+.sponsorcard-paper-5 {
+  background-color: #0b0b0b;
+  width: fit-content;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  margin: 20px;
 }
 .sponsorcard-paper-0 {
   display: none;
@@ -58,7 +77,7 @@
   width: 70%;
 }
 .sponsorcard-img-3 {
-  width: 60%;
+  width: 50%;
 }
 .sponsorcard-img-4 {
   width: 60%;
