--- a/src/pages/Sponsors/Sponsors.styles.css
+++ b/src/pages/Sponsors/Sponsors.styles.css
@@ -13,41 +13,47 @@
   width: 100%;
 }
 .sponsorcard-container {
-  /* padding: 1% 1%; */
+  padding: 1% 1%;
   /* margin: 10px;
     width: 100%; */
+  position: relative;
 }
 
 .sponsorcard-bag {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.home-bg-left,
-.home-bg-right {
+.sponsors-bg-left,
+.sponsors-bg-right {
   position: absolute;
   z-index: 0;
-  width: 20vw;
+  width: 25vw;
   pointer-events: none;
 }
-.home-bg-left {
-  /* top: 30%; */
+
+.sponsors-bg-left {
+  top: 50%;
   left: 0;
 }
-.home-bg-right {
+.sponsors-bg-right {
   /* top: 10%; */
   right: 0;
 }
+
 /* Extra small devices (phones, 600px and down) */
 @media (max-width: 600px) {
-  .home-bg-left,
-  .home-bg-right {
+  .sponsors-bg-left,
+  .sponsors-bg-right {
     position: absolute;
     z-index: 0;
     width: 55vw;
+  }
+  .sponsorcard-bag {
+    flex-wrap: wrap;
   }
 }
 
